fix: sørg for at dropdown i kalenderen støtter dark mode

--- a/packages/datepicker/_calendar-navigation-dropdown.scss
+++ b/packages/datepicker/_calendar-navigation-dropdown.scss
@@ -18,6 +18,7 @@
             font-weight: jkl.$typography-weight-bold;
         }
         background-color: transparent;
+        color: inherit;
         border-radius: 0;
         border: none;
         text-align: end;
